# r-PLibrarian

./: README.md  console.html  index.html  mvpPlanV2.md  package-lock.json  package.json  proposal.md  tailwind.config.js  vite.config.js
src/: App.jsx  console.jsx  index.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: Console.jsx  InfoPanel.jsx  Layout.jsx  MainContent.jsx  MenuBar.jsx  Sidebar.jsx
